--- a/Arrarys/exercise2.html
+++ b/Arrarys/exercise2.html
@@ -12,18 +12,13 @@
 
 
         function print_value(arr, number){
-            for(let index = 0; index < arr.length; index++){
-                if( index == number){
-                return arr[index]
-            }
-        }
-        if (number >= arr.length){
-            return `Sorry, no value in the array for index number: ${number} `
-        }
-
+                if (number > arr.length){
+                return `Sorry, no value in the array for index number: ${number} `
+                }
+            return arr[number];
    }   
 
-   print(print_value([1, 2, 5, 9, 200], 2))   
+   print(print_value([1, 2, 5, 9, 200], 1))   
     </script>
     
 </body>
