--- a/Arrarys/exercise1.html
+++ b/Arrarys/exercise1.html
@@ -18,6 +18,7 @@
 
         function print_sort_arr(arr){
             document.getElementById('result').innerHTML += arr.sort()
+            return arr;
         }
         print(print_sort_arr(arr));
 
