--- a/Arrarys/exercise3.html
+++ b/Arrarys/exercise3.html
@@ -14,7 +14,7 @@
         function oddArr(arr){
             let odd = 0
             for(let i = 0; i< arr.length; i++){
-                if( arr[i] % 2 == 1){
+                if( arr[i] % 2 != 0){
                 odd++
             }
         }
